# conllu_path

./: README.md  pyproject.toml
src/conllu_path_shartular/: __init__.py  conllu.py  exception.py  expr_parser.py  search.py  search_evaluator.py  sentence.py  tree.py
