[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conllu_path_shartular"
version = "0.0.1"
authors = [
  { name="Serban Hartular", email="hartular@gmail.com" },
]
description = "Package for searching conllu trees"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lark >=1.1.8"
]

#[project.urls]
#Homepage = "https://github.com/pypa/sampleproject"
#Issues = "https://github.com/pypa/sampleproject/issues"
